@@ -1,5 +1,6 @@
 ART 4.18
 * Allow editing of datasource in multiple report edit
+* Added extension option for csv report format
 
 ART 4.17
 * Added job pipeline feature
